--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     </div>
 
     <div>
-        <button class="action-btn" onclick="respawn()">Respawn (Start Tile)</button>
+        <button class="action-btn" onclick="respawn()">Respawn</button>
         <button class="action-btn" onclick="initGame()">Generate New Puzzle</button>
     </div>
 
